# lti-producer

./: .gitignore  MANIFEST.in  Makefile  README.rst  lti-producer.yml.sample  manage.py  settings  setup.cfg  urls.py
lti-producer/: wsgi.py
ltiproducer/: apps.py  ltiviews.py  params.py  urls.py  views.py
requirements/: base.txt  dev.txt  production.in  production.txt
standalone/consumer/: urls.py  views.py
standalone/consumer/settings/: base.py  private-sample.py
standalone/consumer/templates/consumer/: iframe.html
standalone/producer/: manage.py  urls.py  wsgi.py
standalone/producer/settings/: base.py  dev.py  private-sample.py  prod.py
