[metadata]
name = lti-producer
version = 0.0.1
description = Generic LTI producer with auto app discoverability
long_description = file: README.rst
author = Strata
author_email = hello@strata.co.jp
url = https://github.com/strata-kk/lti-producer
license = GNU Affero General Public License v3
license_file = LICENSE.txt
classifiers =
    Framework :: Django
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = ltiproducer
zip_safe = True
include_package_data = True
install_requires =
    django>4
    django-lti-toolbox
    huey
    redis

[options.extras_require]
dev =
    black
    django-debug-toolbar
    ipdb
    mypy
    pip-tools
    pylint
    pylint-django

[wheel]
universal = 1
